Task Management: Added security and update and create task

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.orm.use_identifier_rollback=true
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
