Task Management: Added email interface and implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,8 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.orm.use_identifier_rollback=true
 logging.level.org.springframework.web: DEBUG
-logging.level.org.hibernate: ERROR
+logging.level.org.hibernate= ERROR
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
