--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Task Management Micro-service</description>
 	<properties>
 		<java.version>17</java.version>
+		<springfox.swagger.version>2.9.2</springfox.swagger.version>
 	</properties>
 	<dependencies>
 		<dependency>
